test/corpus/interpolation.txt
==========
String interpolation
==========

"foo \(bar)"

----------

(source_code
	(string
		(string_start)
		(content)
		(interpolation
			(identifier))
		(string_end)))

==========
String multiline-interpolation
==========

"foo \(
	bar
)"

----------

(source_code
	(string
		(string_start)
		(content)
		(interpolation
			(identifier))
		(string_end)))
